# sqlx_regression_1387

./: Cargo.toml  README.md  flake.nix
todos/: Cargo.toml
todos/sql/: add_todo.sql  complete_todo.sql  list_todo.sql
todos/src/: main.rs
