[package]
name = "sqlx-example-sqlite-todos"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.8.0", features = [ "attributes" ] }
futures = "0.3"
paw = "1.0"
sqlx = { version = "=0.5.6", default-features = false, features = ["macros", "offline", "sqlite", "runtime-async-std-rustls"] }
# sqlx = { git = "https://github.com/launchbadge/sqlx.git", branch = "ab/fix-query-file", default-features = false, features = ["macros", "offline", "sqlite", "runtime-async-std-rustls"] }
structopt = { version = "0.3", features = ["paw"] }
